tests/declare_global_in_react_module/test_no_explicit_react_import.js
'' as ReactTypes.MyReact; // error: '' ~> 'react'
